--- a/ViT_finetuning.ipynb
+++ b/ViT_finetuning.ipynb
@@ -5,7 +5,7 @@
    "id": "b76b7613-9740-45b7-9739-2dd1e4ad8989",
    "metadata": {},
    "source": [
-    "## Finetuning pre-trained in a self-supervised manner ViT transformer on LIDC dataset."
+    "## Fine-tuning pre-trained ViT-based models on LIDC dataset.\n"
    ]
   },
   {
@@ -49,10 +49,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8a580ce4-bd6f-463f-8f5d-32b1586e91cd",
+   "metadata": {},
+   "source": [
+    "### Dataset creation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63f4e25e-1763-4eed-aa63-59ba81b4080d",
+   "metadata": {},
+   "source": [
+    "Dataset preparation was done as described in a paper: [Integration of Radiomics and Tumor Biomarkers in Interpretable Machine Learning Models](https://doi.org/10.3390/cancers15092459). </br>\n",
+    "You need to download original LIDC-IDRI dataset and process it with a script: `dataset_creation.py`. It takes a while... </br>\n",
+    "Script is prepared for data preparation in batches, because initially due to ICM restrictions I wans't able to process all LIDC-IDRI dataset at once. </br>\n",
+    "I am open to archive crops and checkpoints to share it on a request."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "43ff76f4-dbaa-4d90-b3f0-f99fd489fbd1",
    "metadata": {},
    "source": [
-    "### Dividing dataset into three sets: training, validation and test sets."
+    "### Dividing dataset into 5CV sets:"
    ]
   },
   {
@@ -209,7 +228,7 @@
    "metadata": {},
    "source": [
     "Finetuning was performed with GPU accelaration. To train model I have used python script `train_End2End.py`.\n",
-    "Using first fold I have searched for the best hyperparameters and hyperparameters yielding the best model, were used to train model on five folds."
+    "Using first fold I have searched for the best hyperparameters and hyperparameters yielding the best models, were used to train models on five folds."
    ]
   },
   {
@@ -218,14 +237,18 @@
    "metadata": {},
    "source": [
     "## End2End model evaluation on validation sets\n",
-    "Evaluation is performed on 5 cross-validational folds. "
+    "Evaluation is performed on 5 cross-validational folds. Mean Accuracy over folds is computed. </br>\n",
+    "For each model I have saved three best checkpoints (versions: v0, v1, v2), corresponding to models with the lowest validational loss.\n",
+    "Version v0 has \"the lowest from the lowest\" validational loss."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5e6664db-8c02-4fbf-a6f8-31ea879b23bd",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def E2E_model_evaluation(model_name:str, version:Optional[str]=None, depth:int=1):\n",
@@ -275,9 +298,9 @@
     "    for row in df.itertuples(index=False):\n",
     "        table.add_row(row)\n",
     "\n",
-    "    # Optionally, align columns\n",
+    "    # align columns\n",
     "    for field in df.columns:\n",
-    "        table.align[field] = 'l'  # 'l' for left align, 'r' for right alig\n",
+    "        table.align[field] = 'l'\n",
     "    \n",
     "    return table"
    ]
@@ -682,9 +705,11 @@
   {
    "cell_type": "markdown",
    "id": "19b19c07-5b23-4ca4-8213-e48449081765",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "#### 3Dvit_16 - without inflation/centering strategy\n",
+    "#### 3Dvit_16 - without inflation\n",
     "There are two types of models. Models trained on input stack of slices with depth 21 and models trained on stack with depth 5. Depth 21 yielded models with better looking learning curve, but to make fair comparison with other weight initiation strategies I evaluated also model trained with depth equal 5."
    ]
   },
@@ -707,7 +732,7 @@
    },
    "outputs": [],
    "source": [
-    "# 3Dvit_16 - version 0 ; model trained without inflation/centering strategy\n",
+    "# 3Dvit_16 - version 0 ; model trained without inflation\n",
     "res = E2E_model_evaluation(model_name=\"3Dvit_16_16\", depth=21)"
    ]
   },
@@ -748,7 +773,7 @@
    },
    "outputs": [],
    "source": [
-    "# 3Dvit_16 - version 1 ; model trained without inflation/centering strategy\n",
+    "# 3Dvit_16 - version 1 ; model trained without inflation\n",
     "res = E2E_model_evaluation(model_name=\"3Dvit_16_16\", depth=21, version=\"v1\")"
    ]
   },
@@ -789,7 +814,7 @@
    },
    "outputs": [],
    "source": [
-    "# 3Dvit_16 - version 2 ; model trained without inflation/centering strategy\n",
+    "# 3Dvit_16 - version 2 ; model trained without inflation\n",
     "res = E2E_model_evaluation(model_name=\"3Dvit_16_16\", depth=21 , version=\"v2\")"
    ]
   },
@@ -840,7 +865,7 @@
    },
    "outputs": [],
    "source": [
-    "# 3Dvit_19 - version 0 ; model trained without inflation/centering strategy\n",
+    "# 3Dvit_19 - version 0 ; model trained without inflation\n",
     "res = E2E_model_evaluation(model_name=\"3Dvit_16_19\", depth=5)"
    ]
   },
@@ -881,7 +906,7 @@
    },
    "outputs": [],
    "source": [
-    "# 3Dvit_19 - version 1 ; model trained without inflation/centering strategy\n",
+    "# 3Dvit_19 - version 1 ; model trained without inflation\n",
     "res = E2E_model_evaluation(model_name=\"3Dvit_16_19\", depth=5, version=\"v1\")"
    ]
   },
@@ -922,7 +947,7 @@
    },
    "outputs": [],
    "source": [
-    "# 3Dvit_19 - version 2 ; model trained without inflation/centering strategy\n",
+    "# 3Dvit_19 - version 2 ; model trained without inflation\n",
     "res = E2E_model_evaluation(model_name=\"3Dvit_16_19\", depth=5, version=\"v2\")"
    ]
   },
@@ -973,7 +998,7 @@
    },
    "outputs": [],
    "source": [
-    "# 3Dvit_16 - version 0 ; model trained with inflation strategy\n",
+    "# 3Dvit_16 - version 0 ; model trained with average inflation strategy\n",
     "res = E2E_model_evaluation(model_name=\"3Dvit_16_17\", depth=5)"
    ]
   },
@@ -1014,7 +1039,7 @@
    },
    "outputs": [],
    "source": [
-    "# 3Dvit_16 - version 1 ; model trained with inflation strategy\n",
+    "# 3Dvit_16 - version 1 ; model trained with average inflation strategy\n",
     "res = E2E_model_evaluation(model_name=\"3Dvit_16_17\", depth=5, version=\"v1\")"
    ]
   },
@@ -1055,7 +1080,7 @@
    },
    "outputs": [],
    "source": [
-    "# 3Dvit_16 - version 2 ; model trained with inflation strategy\n",
+    "# 3Dvit_16 - version 2 ; model trained with average inflation strategy\n",
     "res = E2E_model_evaluation(model_name=\"3Dvit_16_17\", depth=5, version=\"v2\")"
    ]
   },
@@ -1106,7 +1131,7 @@
    },
    "outputs": [],
    "source": [
-    "# 3Dvit_16 - version 0 ; model trained with centering strategy\n",
+    "# 3Dvit_16 - version 0 ; model trained with centering inflation strategy\n",
     "res = E2E_model_evaluation(model_name=\"3Dvit_16_18\", depth=5)"
    ]
   },
@@ -1147,7 +1172,7 @@
    },
    "outputs": [],
    "source": [
-    "# 3Dvit_16 - version 1 ; model trained with centering strategy\n",
+    "# 3Dvit_16 - version 1 ; model trained with centering inflation strategy\n",
     "res = E2E_model_evaluation(model_name=\"3Dvit_16_18\", depth=5, version=\"v1\")"
    ]
   },
@@ -1188,7 +1213,7 @@
    },
    "outputs": [],
    "source": [
-    "# 3Dvit_16 - version 1 ; model trained with centering strategy\n",
+    "# 3Dvit_16 - version 1 ; model trained with centering inflation strategy\n",
     "res = E2E_model_evaluation(model_name=\"3Dvit_16_18\", depth=5, version=\"v2\")"
    ]
   },
@@ -1237,7 +1262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
