--- a/ViT_finetuning.ipynb
+++ b/ViT_finetuning.ipynb
@@ -61,9 +61,7 @@
    "metadata": {},
    "source": [
     "Dataset preparation was done as described in a paper: [Integration of Radiomics and Tumor Biomarkers in Interpretable Machine Learning Models](https://doi.org/10.3390/cancers15092459). </br>\n",
-    "You need to download original LIDC-IDRI dataset and process it with a script: `dataset_creation.py`. It takes a while... </br>\n",
-    "Script is prepared for data preparation in batches, because initially due to ICM restrictions I wans't able to process all LIDC-IDRI dataset at once. </br>\n",
-    "I am open to archive crops and checkpoints to share it on a request."
+    "Have look on a `README.md`.\n"
    ]
   },
   {
@@ -82,17 +80,19 @@
    "outputs": [],
    "source": [
     "# Paths\n",
-    "local = False\n",
+    "local = True\n",
     "if local:\n",
-    "    datapath = \"/home/jbinda/INFORM/LIDC/dataset/\"\n",
-    "    subsets_saving_path = \"/home/jbinda/INFORM/LIDC_ViTs/dataset/splitted_sets/\"\n",
-    "    checkpoints_path=\"/home/jbinda/INFORM/LIDC_ViTs/ckpt/End2End/\"\n",
+    "    datapath = \"/home/jbinda/INFORM/3DViT/dataset/\"\n",
+    "    subsets_saving_path = \"/home/jbinda/INFORM/3DViT/dataset/splitted_sets/\"\n",
+    "    checkpoints_path=\"/home/jbinda/INFORM/3DViT/ckpt/End2End/\"\n",
     "    Path(subsets_saving_path).mkdir(parents=True, exist_ok=True)\n",
+    "    Path(checkpoints_path).mkdir(parents=True, exist_ok=True)\n",
     "else:\n",
-    "    datapath = \"/home/dzban112/LIDC_ViTs/dataset/\"\n",
-    "    subsets_saving_path = \"/home/dzban112/LIDC_ViTs/dataset/splitted_sets/\"\n",
-    "    checkpoints_path=\"/home/dzban112/LIDC_ViTs/ckpt/End2End/\"\n",
-    "    Path(subsets_saving_path).mkdir(parents=True, exist_ok=True)"
+    "    datapath = \"...\"\n",
+    "    subsets_saving_path = \"...\"\n",
+    "    checkpoints_path=\"...\"\n",
+    "    Path(subsets_saving_path).mkdir(parents=True, exist_ok=True)\n",
+    "    Path(checkpoints_path).mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
@@ -705,9 +705,7 @@
   {
    "cell_type": "markdown",
    "id": "19b19c07-5b23-4ca4-8213-e48449081765",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### 3Dvit_16 - without inflation\n",
     "There are two types of models. Models trained on input stack of slices with depth 21 and models trained on stack with depth 5. Depth 21 yielded models with better looking learning curve, but to make fair comparison with other weight initiation strategies I evaluated also model trained with depth equal 5."
